
7. Removed checkbutton for 'html formatting' from 'Mismatch analyzer'. It is set to True in code.

8. Tool 'Filter fasta by Blast's E-value' has been partly rewritten. Now this tool can filter by 'Bit score' in addition
   to 'E-value' filtering. Tool has been renamed as 'Filter Blast by Bit or E-value'.


------------------------------------------------------------------------------------------------------------------------


Ver 26 major modifications:

1. Adding residue conservation score by following methods:
		a. Shannon entropy (discontinued)
		b. Liu08

2. Adding color coded Reference sequence as part of html file output based on conservation scale for residue positions
   requested. Only in Protein-mode.

3. Changed %Similarity by alphanet grouping to % conservation using Liu08 method. These are implemented in both html
   and csv output file. Grouping by alphabet will still be used for coloring residues in html output.

4. In HTML output, space between letters in alignment section are increased using <spaced> tag.

5. Added ability for user to choose 'All residue positions' in Mismatch analyzer.

6. Added verification step to compare if Reference sequence matches exactly to corresponding sequence in input
   MSA file or input Sequences file (if needed) as part of tool 'Mismatch analyzer'.


------------------------------------------------------------------------------------------------------------------------


Ver 25 major modifications:

1. Removed 'outfile' parameter option that was used as part of clustalo command. It was redundant now that Rescon allows
   choosing output folder.

2. Made GUI changes so as to appropriately accommodate clustal omega's web server options.

3. Made several changes to the function that manages clustal alignment using EMBL-EBI webserver.

4. Edited files -settings file, log file and user guide - to be called by complete file path instead of relative path.
