@@ -25,6 +25,8 @@ Ver 27 (under development) major modifications:
 8. Tool 'Filter fasta by Blast's E-value' has been partly rewritten. Now this tool can filter by 'Bit score' in addition
    to 'E-value' filtering. Tool has been renamed as 'Filter Blast by Bit or E-value'.
 
+9. Now 10-color-gradient-codes are read from Settings file for coloring reference seq by conservation score in HTML output file.
+
 
 ------------------------------------------------------------------------------------------------------------------------
 
